fix: Tweak styling of portfolio pages on smaller devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,6 +41,13 @@ html {
     scroll-behavior: smooth;
 }
 
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 1em;
+  }
+}
+
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -245,8 +252,7 @@ nav a:hover {
 
 @media screen and (max-width: 640px) {
     nav ul li a {
-        font-size: 0.75em;
-        padding: 0.75rem 0.65rem;
+        padding: 0.75rem 0.5rem;
     }
 }
 
@@ -589,25 +595,38 @@ nav a:hover {
 
 .portfolio-header .panel-contents {
   background: var(--color-neutral-600);
-  padding: 2.4rem;
+  padding: 0.8rem 1.6rem;
   position: relative;
   z-index: 2;
 }
 
-.portfolio-tags {
-    margin-bottom: 2em;
+@media screen and (min-width: 639px) {
+  .portfolio-header .panel-contents {
+    padding: 1.6rem 2.4rem;
+  }
 }
 
-.tag {
-    display: inline-block;
-    background: var(--color-neutral-500);
-    color: var(--color-neutral-100);
-    padding: 0.25em 0.5em;
-    text-transform: uppercase;
-    letter-spacing: 0.125em;
-    font-size: 0.7em;
-    white-space: nowrap;
-    margin: 4px 2px;
+.portfolio-tags {
+  display: none;
+}
+
+@media screen and (min-width: 639px) {
+  .portfolio-tags {
+    display: block;
+    margin-bottom: 2em;
+  }
+
+  .tag {
+      display: inline-block;
+      background: var(--color-neutral-500);
+      color: var(--color-neutral-100);
+      padding: 0.25em 0.5em;
+      text-transform: uppercase;
+      letter-spacing: 0.125em;
+      font-size: 0.7em;
+      white-space: nowrap;
+      margin: 4px 2px;
+  }
 }
 
 .portfolio-links a:nth-of-type(2) {
